# AllEnricher-v2

./: .dockerignore  .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  DEVELOPMENT_PLAN.md  Dockerfile  Dockerfile.test  LICENSE  README.md  check_background.py  check_db_file.py  check_kegg.py  compare_plots.py  compare_results.py  compare_v1v2.py  compare_v1v2_detail.py  config.example.yaml  debug_analysis.py  debug_gene_total.py  debug_v1_exact.py  debug_v1_exact2.py  demo_ai_interpreter.py  e2e_test.py  full_comparison.py  generate_e2e_report.py  generate_human_test_data.py  investigate_differences.py  investigate_pval_diff.py  pyproject.toml  regenerate_report.py  run_comparison.py  test_config_demo.yaml  test_data_generator.py  test_deepseek_ai.py  test_deepseek_config.yaml  test_e2e_gsea.py  test_e2e_gsva.py  test_e2e_ssgsea.py  test_e2e_visualization.py  (+2 more)
allenricher/: __init__.py  __main__.py  cli.py
allenricher/ai/: __init__.py  interpreter.py
allenricher/analysis/: __init__.py  tf_enrichment.py  tf_meta_analyzer.py
allenricher/api/: __init__.py  server.py
allenricher/api/static/: index.html
allenricher/core/: __init__.py  bioconductor.py  config.py  enrichment.py  gsva.py
allenricher/core/r_scripts/: fgsea_analysis.R  gsva_analysis.R
allenricher/database/: __init__.py  animaltfdb_fetcher.py  builder.py  chea3_fetcher.py  custom_builder.py  download_manager.py  download_utils.py  downloader.py  gmt_generator.py  goa_fetcher.py  htftarget_fetcher.py  kegg_fetcher.py  manager.py  mirrors.py  ortholog_mapper.py  species_lookup.py  species_registry.py  trrust_fetcher.py  version.py  wikipathways_fetcher.py
allenricher/database/data/: animaltfdb_v4_species.txt
allenricher/database/parsers/: __init__.py  animaltfdb.py  annotation_parser.py  chea3.py  disgenet.py  do.py  go.py  htftarget.py  kegg.py  reactome.py  trrust.py  wikipathways.py  wikipathways_gpml.py
allenricher/report/: __init__.py  generator.py  methods_reference.py  visualizer.py
allenricher/report/templates/: tf_report.html
allenricher/visualization/: __init__.py  barplot.R  barplot.py  bubble.R  bubble.py  color_config.py  common_plots.py  cute_charts.py  gsea_plots.py  gsva_plots.py  plot_config.py  plot_theme.py  plot_utils.py  plotter.py  r_plotter.py
allenricher/visualization/r_scripts/: activity_heatmap.R  common.R  group_comparison.R  gsea_barplot.R  gsea_circos.R  gsea_cnetplot.R  gsea_dotplot.R  gsea_emapplot.R  gsea_enrichment_plot.R  gsea_enrichment_plot2.R  gsea_heatmap.R  gsea_lollipop.R  gsea_nes_plot.R  gsea_ridgeplot.R  sample_correlation.R
deepseek_test_output/: KEGG_enrichment.tsv  enrichment_report.html  enrichment_report_v2.html
demo_output/: mock_interpretation.html  mock_interpretation.json
docker/: python-constraints.txt
docs/: CURRENT_IMPLEMENTATION.md  README.md  database-version-management-report.md  gsea-gsva-ssgsea-report.md  test-report.md  version-management-improvement-report.md
docs/plans/: 2025-05-15-optimize-downloader-speed-integrity.md
docs/release/: FINAL_RELEASE_CHECKLIST.md  run_final_release_checks.ps1
docs/reports/: 2026-06-04-gsea-r-plots-e2e-report.md
docs/specs/: fix-kegg-hierarchy-ai-display.md  kegg-rest-api-fetch.md  kegg-term-name-investigation.md  test-api-ai-interpreter.md
docs/superpowers/plans/: 2026-05-15-allenricher-v2-test-plan.md  (+15 more)
examples/: README.md  gsea_usage.py  run_examples.py
examples/data/: activity_scores.tsv  gsea_results.tsv  ora_results.tsv
test_data/: e2e_final_summary.md  e2e_test_report.html  e2e_test_report.json  expression_matrix.tsv  expression_matrix_6000.tsv  gene_sets.gmt  gmt_analysis.json  gmt_gene_pool.json  gsva_plage_results.csv  gsva_results.csv  gsva_zscore_results.csv  ranked_genes.tsv  ranked_genes_500.tsv  ssgsea_results.csv  test_data_metadata.json  test_pathways_from_gmt.gmt  top_degs.txt
test_data/e2e_results/: gsea_report.json  gsea_results.csv  gsva_gsva_results.csv  gsva_plage_results.csv  gsva_report.json  gsva_zscore_results.csv  ssgsea_report.json  ssgsea_results.csv  visualization_report.json
test_db/: go-basic.obo  hsa.gene2go.txt  test_genes.txt
test_e2e_2026/: audit_e2e_outputs.py  create_visual_contact_sheet.py
test_e2e_2026/18_real_world_sci/: PROTOCOL_AMENDMENTS.md  README.md  case_matrix.yaml  prepare_database_snapshot.py  prepare_expression_atlas.py  preregistered_expectations.yaml  regenerate_reports.py  run_real_world_sci.py  verify_r_dependencies.py
test_e2e_2026/19_competitor_benchmark/: README.md  benchmark_matrix.yaml  competitor_methods.R  list_species_summary_20260721.txt  make_publication_figures.py  make_supplementary_pdf.py  run_benchmark.py  论文内部已知问题.md
test_output/: academic_report.html  test_config.yaml  tiny_genes.txt
test_output/cli_config_results/: GO_enrichment.tsv
test_output/cli_results/: KEGG_enrichment.tsv
test_output/html_png_test/: KEGG_enrichment.tsv  report.html
test_output/phase5_e2e/: report.html
test_output/v1v2_compare/: DO_enrichment.tsv  DisGeNET_enrichment.tsv  GO_enrichment.tsv  Reactome_enrichment.tsv  report.html
tests/: __init__.py  test_ai_integration.py  test_ai_interpreter.py  test_ai_structured.py  test_animaltfdb_parser.py  test_annotation_parser.py  test_api_server.py  test_api_web_alignment.py  test_bioconductor_contract.py  test_chea3_fetcher.py  test_cli.py  test_cli_build_custom.py  test_cli_gsea.py  test_cli_r_plots.py  test_cli_species_registry_parity.py  test_color_config.py  test_common_plots.py  test_competitor_benchmark.py  test_container_deployment.py  test_custom_builder.py  test_custom_db_integration.py  test_cute_charts.py  test_database.py  test_database_download_validation.py  test_database_manager_correctness.py  test_database_manager_tf.py  test_database_parser_correctness.py  test_download.py  test_e2e_custom_species.py  test_e2e_gsea.py  test_e2e_gsva.py  test_e2e_next_optimization.py  test_e2e_runner.py  test_e2e_ssgsea.py  test_e2e_visual_audit.py  test_e2e_visualization.py  test_english_only.py  test_enrichment.py  test_enrichment_extended.py  test_gmt_generation_e2e.py  (+21 more)
(+6 files in other folders)
