# ============================================================
# AllEnricher v2.3.0 项目构建与工具配置文件
# ============================================================
# 本文件是 Python 项目的标准配置文件（PEP 518），用于：
#   1. 定义项目元信息（名称、版本、作者等）
#   2. 声明依赖包
#   3. 配置各种开发工具（测试、格式化、类型检查等）
# 安装方式：pip install -e .（开发模式）或 pip install .（正式安装）
# ============================================================

# --------------------------------------------------
# 构建系统配置
# 指定使用 setuptools 作为构建后端
# --------------------------------------------------
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# --------------------------------------------------
# 项目基本信息
# --------------------------------------------------
[project]
name = "allenricher"                                              # 包名（pip install allenricher）
version = "2.3.0"                                                 # 版本号
description = "A comprehensive gene set function enrichment tool for multiple species"  # 项目简介
readme = "README.md"                                              # README 文件
license = "MIT"                                                   # 开源许可证
authors = [
    {name = "AllEnricher Team", email = "allenricher@example.com"}
]
maintainers = [
    {name = "AllEnricher Team", email = "allenricher@example.com"}
]
keywords = [                                                       # PyPI 搜索关键词
    "bioinformatics",                                              # 生物信息学
    "enrichment-analysis",                                         # 富集分析
    "gene-ontology",                                               # 基因本体
    "pathway-analysis",                                            # 通路分析
    "KEGG",                                                        # KEGG 数据库
    "Reactome",                                                    # Reactome 数据库
    "GSEA"                                                         # 基因集富集分析
]
classifiers = [                                                    # PyPI 分类标签
    "Development Status :: 4 - Beta",                              # 开发阶段：Beta
    "Environment :: Console",                                      # 运行环境：命令行
    "Intended Audience :: Science/Research",                       # 目标用户：科研人员
    "Intended Audience :: Developers",                             # 目标用户：开发者
    "Operating System :: OS Independent",                           # 跨平台
    "Programming Language :: Python :: 3",                         # Python 3
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",         # 生物信息学
    "Topic :: Scientific/Engineering :: Visualization",            # 科学可视化
]
requires-python = ">=3.8"                                         # 最低 Python 版本要求

# --------------------------------------------------
# 核心依赖（安装时自动安装）
# --------------------------------------------------
dependencies = [
    "numpy>=1.20.0",       # 数值计算（矩阵运算、统计函数）
    "pandas>=1.3.0",       # 数据处理（DataFrame、TSV读写）
    "scipy>=1.7.0",        # 科学计算（Fisher精确检验、超几何检验）
    "statsmodels>=0.12.0", # 统计模型（多重检验校正：BH/BY/Bonferroni/Holm）
    "pyyaml>=5.4.0",       # YAML 配置文件解析
    "requests>=2.25.0",    # HTTP 请求（AI接口调用、数据库下载）
    "tqdm>=4.60.0",        # 进度条显示
    "openpyxl>=3.0.0",     # Excel 文件读写（支持 .xlsx 格式的基因列表加载）
    "matplotlib>=3.4.0",   # 基础绘图引擎（CLI 默认会生成图表）
    "seaborn>=0.11.0",     # 统计可视化
    "plotly>=5.0.0",       # TF 富集 HTML 图表
    "jinja2>=3.0.0",       # TF HTML 报告模板渲染
]

# --------------------------------------------------
# 可选依赖（按需安装）
# 安装方式：pip install allenricher[api] 或 pip install allenricher[all]
# --------------------------------------------------
[project.optional-dependencies]
# API 服务相关依赖（启动 Web 服务时需要）
api = [
    "fastapi>=0.68.0",             # Web 框架
    "uvicorn>=0.15.0",             # ASGI 服务器
    "python-multipart>=0.0.5",     # 文件上传支持
]
# AI 解读相关依赖（使用 OpenAI/Claude 解读时需要）
ai = [
    "openai>=1.0.0",               # OpenAI API 客户端
    "anthropic>=0.18.0",           # Anthropic Claude API 客户端
]
# 可视化相关依赖（核心包已包含 Python 绘图依赖，保留该 extra 兼容旧安装命令）
visualization = [
    "matplotlib>=3.4.0",           # 基础绑图库
    "seaborn>=0.11.0",             # 统计可视化
    "plotly>=5.0.0",               # TF 富集 HTML 图表
]
# 开发工具依赖（仅开发者需要）
dev = [
    "pytest>=6.0.0",               # 测试框架
    "pytest-cov>=2.12.0",          # 测试覆盖率
    "black>=21.0",                 # 代码格式化
    "flake8>=3.9.0",               # 代码风格检查
    "mypy>=0.900",                 # 静态类型检查
    "isort>=5.0.0",                # import 排序
    "httpx>=0.23.0",               # FastAPI TestClient 测试依赖
]
# 安装所有可选依赖：pip install allenricher[all]
all = [
    "allenricher[api,ai,visualization,dev]",
]

# --------------------------------------------------
# 命令行入口
# 定义后可直接在终端使用 allenricher 命令
# --------------------------------------------------
[project.scripts]
allenricher = "allenricher.cli:main"   # allenricher 命令 -> cli.py 的 main() 函数

# --------------------------------------------------
# 项目链接
# --------------------------------------------------
[project.urls]
Homepage = "https://github.com/zd105/AllEnricher"
Documentation = "https://github.com/zd105/AllEnricher#readme"
Repository = "https://github.com/zd105/AllEnricher.git"
Issues = "https://github.com/zd105/AllEnricher/issues"

# --------------------------------------------------
# setuptools 包发现配置
# 指定哪些目录作为 Python 包打包
# --------------------------------------------------
[tool.setuptools.packages.find]
where = ["."]                    # 从项目根目录开始查找
include = ["allenricher*"]       # 包含所有 allenricher 开头的包

# --------------------------------------------------
# setuptools 包数据配置
# 指定非 .py 文件也一并打包
# --------------------------------------------------
[tool.setuptools.package-data]
allenricher = [
    "py.typed",
    "*.yaml",
    "*.json",
    "api/static/*.html",
    "report/templates/*.html",
    "visualization/r_scripts/*.R",
]

# --------------------------------------------------
# Black 代码格式化工具配置
# --------------------------------------------------
[tool.black]
line-length = 100                                          # 每行最大字符数
target-version = ['py38', 'py39', 'py310', 'py311']       # 目标 Python 版本
include = '\.pyi?$'                                        # 处理 .py 和 .pyi 文件
exclude = '''
/(
    \.eggs                  # 排除的目录
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# --------------------------------------------------
# isort import 排序工具配置
# 与 black 配合使用，保持风格一致
# --------------------------------------------------
[tool.isort]
profile = "black"                   # 使用 black 兼容配置
line_length = 100                   # 与 black 一致的行宽
multi_line_output = 3               # 多行 import 格式
include_trailing_comma = true       # 多行 import 末尾加逗号
force_grid_wrap = 0                 # 不强制换行
use_parentheses = true              # 使用括号包裹
ensure_newline_before_comments = true  # 注释前空行

# --------------------------------------------------
# mypy 静态类型检查配置
# 开启严格模式，确保类型安全
# --------------------------------------------------
[tool.mypy]
python_version = "3.8"              # 目标 Python 版本
warn_return_any = true              # 警告返回值类型为 Any
warn_unused_configs = true          # 警告未使用的配置
disallow_untyped_defs = true        # 禁止无类型注解的函数定义
disallow_incomplete_defs = true     # 禁止不完整的类型注解
check_untyped_defs = true           # 检查无类型注解的函数
disallow_untyped_decorators = true  # 禁止无类型的装饰器
no_implicit_optional = true         # 禁止隐式 Optional
warn_redundant_casts = true         # 警告多余的类型转换
warn_unused_ignores = true          # 警告未使用的 # type: ignore
warn_no_return = true               # 警告无返回值的函数
warn_unreachable = true             # 警告不可达代码
strict_equality = true              # 严格相等比较

# --------------------------------------------------
# pytest 测试框架配置
# --------------------------------------------------
[tool.pytest.ini_options]
minversion = "6.0"                   # 最低 pytest 版本
addopts = "-ra -q"  # 默认参数：显示摘要、安静模式（覆盖率可通过 --cov 选项手动启用）
testpaths = ["tests"]                # 测试文件目录
python_files = ["test_*.py"]         # 测试文件命名模式
python_classes = ["Test*"]           # 测试类命名模式
python_functions = ["test_*"]        # 测试函数命名模式
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# --------------------------------------------------
# 代码覆盖率配置 - 运行时
# --------------------------------------------------
[tool.coverage.run]
source = ["allenricher"]             # 覆盖率统计范围
omit = ["tests/*", "*/__pycache__/*"]  # 排除测试代码和缓存

# --------------------------------------------------
# 代码覆盖率配置 - 报告
# --------------------------------------------------
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",              # 明确标记不覆盖的行
    "def __repr__",                  # __repr__ 方法
    "raise AssertionError",          # 断言错误
    "raise NotImplementedError",      # 未实现的方法
    "if __name__ == .__main__.:",    # 脚本入口
    "if TYPE_CHECKING:",             # 类型检查专用代码
]
