# ============================================================
# AllEnricher v2.0 Project Build and Tool Profile
# ============================================================
# This document is the standard configuration document for the Python project (PP 518) for:
#   1. Define project meta-information (name, version, author, etc.)
#   Declaration of reliance package
#   Configure development tools (testing, formatting, type checking, etc.)
# Installed by: pip install-e. (development model) or pip install. (rear)
# ============================================================

# --------------------------------------------------
# Build System Configuration
# Specifies the use of Setuptools as a backend for construction
# --------------------------------------------------
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# --------------------------------------------------
# Project Basic Information
# --------------------------------------------------
[project]
name = "allenricher"                                              # Package Name (pip install allenricher)
version = "2.1.1"                                                 # Version No.
description = "A comprehensive gene set function enrichment tool for multiple species"  # Project description
readme = "README.md"                                              # README Documentation
license = {text = "MIT"}                                          # Open source licence
authors = [
    {name = "Jieling Xiao"},
    {name = "Qianwen Zhou"},
    {name = "Chunyu Wang"},
    {name = "Du Zhang", email = "zhangducsu@csu.edu.cn"}
]
maintainers = [
    {name = "Du Zhang", email = "zhangducsu@csu.edu.cn"}
]
keywords = [                                                       # PyPI Search keywords
    "bioinformatics",                                              # Bioinformatics
    "enrichment-analysis",                                         # Enrichment analysis
    "gene-ontology",                                               # Genome
    "pathway-analysis",                                            # Access analysis
    "KEGG",                                                        # KEGG Database
    "Reactome",                                                    # Reactome Database
    "GSEA"                                                         # Gene set enrichment analysis
]
classifiers = [                                                    # PyPI Classification Label
    "Development Status :: 4 - Beta",                              # Development phase: Beta
    "Environment :: Console",                                      # Operating environment: Command Line
    "Intended Audience :: Science/Research",                       # Target user: Researcher
    "Intended Audience :: Developers",                             # Target user: Developer
    "License :: OSI Approved :: MIT License",                      # MIT Licence
    "Operating System :: OS Independent",                           # Cross Platform
    "Programming Language :: Python :: 3",                         # Python 3
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",         # Bioinformatics
    "Topic :: Scientific/Engineering :: Visualization",            # Scientific Visualization
]
requires-python = ">=3.8"                                         # Minimum Python Version request

# --------------------------------------------------
# Core Dependencies (Auto-installation at installation)
# --------------------------------------------------
dependencies = [
    "numpy>=1.20.0",       # Value calculation (Matrix operations, Statistical Functions)
    "pandas>=1.3.0",       # Data processing (DataFrame, TSVRead and write)
    "scipy>=1.7.0",        # Scientific calculations (FisherExact Test, Super-geometric check.)
    "statsmodels>=0.12.0", # Statistical models (Multiple Test Correction: BH/BY/Bonferroni/Holm)
    "pyyaml>=5.4.0",       # YAML Profile Resolution
    "requests>=2.25.0",    # HTTP Request (AIInterface call, Database Download)
    "tqdm>=4.60.0",        # Progress bar display
    "openpyxl>=3.0.0",     # Excel Document reading and writing (Support .xlsx Loading of the gene list in format)
    "Jinja2>=3.0.0",       # HTML template rendering used by the CLI
    "plotly>=5.0.0",       # Interactive TF report figures imported by the package
]

# --------------------------------------------------
# Optional Dependent (installation as required)
# Installed with: pip install allenricher [api] or pip install allenricher [all]
# --------------------------------------------------
[project.optional-dependencies]
# API Service Related Dependence (need to start Web service)
api = [
    "fastapi>=0.68.0",             # Web Frame
    "uvicorn>=0.15.0",             # ASGI Servers
    "python-multipart>=0.0.5",     # File Upload Support
]
# AI Interpretation of Related Dependence (needs when interpreting using OpenAI/Claude)
ai = [
    "openai>=1.0.0",               # OpenAI API Client
    "anthropic>=0.18.0",           # Anthropic Claude API Client
]
# Visualize associated dependence (Python original, non-R binding)
visualization = [
    "matplotlib>=3.4.0",           # Base binding library
    "seaborn>=0.11.0",             # Statistical visualization
]
# Development tools dependent ( only developed people need)
dev = [
    "pytest>=6.0.0",               # Test Frame
    "pytest-cov>=2.12.0",          # Test coverage
    "httpx2>=2.0,<3",              # Starlette TestClient Test the transport layer.
    "black>=21.0",                 # Code Formatting
    "flake8>=3.9.0",               # Code style check
    "mypy>=0.900",                 # Static type check
    "isort>=5.0.0",                # import Sort
]
# Install all optional dependencies: pip install allenricher [all]
all = [
    "allenricher[api,ai,visualization,dev]",
]

# --------------------------------------------------
# Command Line Entry
# Defined to use allenricher command directly at the terminal
# --------------------------------------------------
[project.scripts]
allenricher = "allenricher.cli:main"   # allenricher Command -> cli.py The... main() Function

# --------------------------------------------------
# Project Link
# --------------------------------------------------
[project.urls]
Homepage = "https://github.com/zhangducsu/AllEnricher-v2"
Documentation = "https://github.com/zhangducsu/AllEnricher-v2#readme"
Repository = "https://github.com/zhangducsu/AllEnricher-v2.git"
Issues = "https://github.com/zhangducsu/AllEnricher-v2/issues"

# --------------------------------------------------
# Setuptools Package found configuration
# Specify which directories are to be packaged as Python
# --------------------------------------------------
[tool.setuptools.packages.find]
where = ["."]                    # Start with root directory
include = ["allenricher*"]       # Include All allenricher The first bag.

# --------------------------------------------------
# Setuptools Package Data Configuration
# Specify that non.py files are also packed
# --------------------------------------------------
[tool.setuptools.package-data]
allenricher = ["py.typed", "*.yaml", "*.json", "api/static/*", "core/r_scripts/*.R", "database/data/*.txt", "visualization/r_scripts/*.R"]

# --------------------------------------------------
# Black Code Format Tool Configuration
# --------------------------------------------------
[tool.black]
line-length = 100                                          # Maximum number of characters per row
target-version = ['py38', 'py39', 'py310', 'py311']       # Objective Python Version
include = '\.pyi?$'                                        # Deal .py and .pyi Documentation
exclude = '''
/(
    \.eggs                  # Excluded Directory
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# --------------------------------------------------
# Sorting tool configuration for the first key import
# Use with black, same style
# --------------------------------------------------
[tool.isort]
profile = "black"                   # Use black Compatibility Configuration
line_length = 100                   # and black Unanimously wide
multi_line_output = 3               # Multiline import Format
include_trailing_comma = true       # Multiline import Add comma at the end
force_grid_wrap = 0                 # Do Not Force Line Break
use_parentheses = true              # Use the brackets
ensure_newline_before_comments = true  # Empty Line Before Comment

# --------------------------------------------------
# Mypy Static Type Check Configuration
# Turn on the strict mode and make sure the type is secure.
# --------------------------------------------------
[tool.mypy]
python_version = "3.8"              # Objective Python Version
warn_return_any = true              # Warning Return Value Type Any
warn_unused_configs = true          # Warning for unused configuration
disallow_untyped_defs = true        # Disable function definition for non-type note
disallow_incomplete_defs = true     # Prohibit incomplete type of comment
check_untyped_defs = true           # Check for the function of no type note
disallow_untyped_decorators = true  # Ban non-type decorators
no_implicit_optional = true         # Disable invisible Optional
warn_redundant_casts = true         # Warn redundant type conversion
warn_unused_ignores = true          # Warnings are unused # type: ignore
warn_no_return = true               # Warn function for no return value
warn_unreachable = true             # Warning Unreachable Code
strict_equality = true              # Strict Equivalence

# --------------------------------------------------
# pytest test frame configuration
# --------------------------------------------------
[tool.pytest.ini_options]
minversion = "6.0"                   # Minimum pytest Version
addopts = "-ra -q"  # Default parameters: Show Summary, Quiet mode (Coverage through --cov Option Manually Enable)
testpaths = ["tests"]                # Test file directory
python_files = ["test_*.py"]         # Test file naming mode
python_classes = ["Test*"]           # Test class naming mode
python_functions = ["test_*"]        # Test Function Naming Mode
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# --------------------------------------------------
# Code Cover Configuration - Run-time
# --------------------------------------------------
[tool.coverage.run]
source = ["allenricher"]             # Coverage statistics
omit = ["tests/*", "*/__pycache__/*"]  # Exclude test code and cache

# --------------------------------------------------
# Code Cover Configuration - Report
# --------------------------------------------------
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",              # Mark clearly the unoverwrite rows
    "def __repr__",                  # __repr__ Methodology
    "raise AssertionError",          # Error in asserting
    "raise NotImplementedError",      # Unmet methodology
    "if __name__ == .__main__.:",    # Script entrance
    "if TYPE_CHECKING:",             # Type Check Special Code
]
